# secure-notes

./: README.md  cargo.toml
assets/: README.md
ui/: Cargo.toml
ui/src/: circular_loader.rs  editor.rs  first_start.rs  main.rs  utils.rs
ui/src/types/: mod.rs  vault_index.rs  vault_index_entry.rs  vault_info.rs
ui/src/utils/: mod.rs  vault.rs
